# quotes-convert

./: CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  test.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  api-reference.md  index.md  playground.md
docs/theme/overrides/: main.html
docs/theme/overrides/partials/: title.html
quotes_convert/: __init__.py  converter.py  core.py  model.py
tests/: test_converter.py  test_core.py  test_stream.py
